examples/test/testpolicy3449.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3449
  namespace: namespace220
spec:
  podSelector:
    matchLabels:
      key15: value20
      key47: value34
      key49: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value29
      podSelector:
        matchLabels:
          key40: value19
          key34: value30
